// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`attack scenarios > big_plains equal 20k tiles each, 1M vs 1M, attack 200k 1`] = `
{
  "attackerLossPerSecond": 4112,
  "attackerLossPerTile": 66.52,
  "attackerTiles": 20000,
  "attackerTroopsLost": 45234,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1955,
  "defenderLossPerTile": 31.62,
  "defenderTiles": 20000,
  "defenderTroopsLost": 21500,
  "finished": true,
  "ticks": 110,
  "tilesConquered": 680,
  "tilesPerSecond": 61.82,
}
`;

exports[`attack scenarios > big_plains equal 20k tiles each, 200k vs 200k, attack 40k 1`] = `
{
  "attackerLossPerSecond": 2537,
  "attackerLossPerTile": 50.74,
  "attackerTiles": 20000,
  "attackerTroopsLost": 34501,
  "defenderEliminated": false,
  "defenderLossPerSecond": 316.2,
  "defenderLossPerTile": 6.324,
  "defenderTiles": 20000,
  "defenderTroopsLost": 4300,
  "finished": true,
  "ticks": 136,
  "tilesConquered": 680,
  "tilesPerSecond": 50,
}
`;

exports[`attack scenarios > giant 1M vs 600k tiles, 8M troops all-in vs 1M defender 1`] = `
{
  "attackerLossPerSecond": 23840,
  "attackerLossPerTile": 5.036,
  "attackerTiles": 1010406,
  "attackerTroopsLost": 26221,
  "defenderEliminated": false,
  "defenderLossPerSecond": 3228,
  "defenderLossPerTile": 0.682,
  "defenderTiles": 591663,
  "defenderTroopsLost": 3551,
  "finished": true,
  "ticks": 11,
  "tilesConquered": 5207,
  "tilesPerSecond": 4734,
}
`;

exports[`attack scenarios > giant 1M vs 600k tiles, 8M vs 8M troops, attack 2M 1`] = `
{
  "attackerLossPerSecond": 22370,
  "attackerLossPerTile": 23.19,
  "attackerTiles": 1010406,
  "attackerTroopsLost": 120771,
  "defenderEliminated": false,
  "defenderLossPerSecond": 8549,
  "defenderLossPerTile": 8.866,
  "defenderTiles": 591663,
  "defenderTroopsLost": 46163,
  "finished": true,
  "ticks": 54,
  "tilesConquered": 5207,
  "tilesPerSecond": 964.3,
}
`;

exports[`attack scenarios > giant 1M-tile attacker, 8M troops, attack 2M vs 400-tile turtle with 4M (10k/tile) 1`] = `
{
  "attackerLossPerSecond": 32290,
  "attackerLossPerTile": 16.64,
  "attackerTiles": 1010018,
  "attackerTroopsLost": 6458,
  "defenderEliminated": true,
  "defenderLossPerSecond": 51550,
  "defenderLossPerTile": 26.57,
  "defenderTiles": 388,
  "defenderTroopsLost": 10309,
  "finished": true,
  "ticks": 2,
  "tilesConquered": 388,
  "tilesPerSecond": 1940,
}
`;

exports[`attack scenarios > giant 1M-tile attacker, 8M troops, attack 2M vs 400-tile turtle with 400k (1k/tile) 1`] = `
{
  "attackerLossPerSecond": 1005,
  "attackerLossPerTile": 0.518,
  "attackerTiles": 1010018,
  "attackerTroopsLost": 201,
  "defenderEliminated": true,
  "defenderLossPerSecond": 5150,
  "defenderLossPerTile": 2.655,
  "defenderTiles": 388,
  "defenderTroopsLost": 1030,
  "finished": true,
  "ticks": 2,
  "tilesConquered": 388,
  "tilesPerSecond": 1940,
}
`;

exports[`attack scenarios > giant 400-tile attacker, 1M troops all-in vs 1M-tile defender with 1M 1`] = `
{
  "attackerLossPerSecond": 12010,
  "attackerLossPerTile": 20.99,
  "attackerTiles": 388,
  "attackerTroopsLost": 46836,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 1010018,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 39,
  "tilesConquered": 2231,
  "tilesPerSecond": 572.1,
}
`;

exports[`attack scenarios > giant 400-tile attacker, 100k troops, attack 50k vs 1M-tile sparse defender with 1M 1`] = `
{
  "attackerLossPerSecond": 1190,
  "attackerLossPerTile": 53.48,
  "attackerTiles": 388,
  "attackerTroopsLost": 50000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 1010018,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 420,
  "tilesConquered": 935,
  "tilesPerSecond": 22.26,
}
`;

exports[`attack scenarios > giant 600k vs 1M tiles, 1M troops attack 500k vs 8M defender 1`] = `
{
  "attackerLossPerSecond": 8096,
  "attackerLossPerTile": 15.27,
  "attackerTiles": 591663,
  "attackerTroopsLost": 46956,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1714,
  "defenderLossPerTile": 3.231,
  "defenderTiles": 1010406,
  "defenderTroopsLost": 9940,
  "finished": true,
  "ticks": 58,
  "tilesConquered": 3076,
  "tilesPerSecond": 530.3,
}
`;

exports[`attack scenarios > plains 1-troop attack vs 50k defender 1`] = `
{
  "attackerLossPerSecond": 3.333,
  "attackerLossPerTile": 1,
  "attackerTiles": 5000,
  "attackerTroopsLost": 1,
  "defenderEliminated": false,
  "defenderLossPerSecond": 33.33,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 10,
  "finished": true,
  "ticks": 3,
  "tilesConquered": 1,
  "tilesPerSecond": 3.333,
}
`;

exports[`attack scenarios > plains 10M-troop attack vs defender with 1 troop 1`] = `
{
  "attackerLossPerSecond": 3297,
  "attackerLossPerTile": 9.032,
  "attackerTiles": 5000,
  "attackerTroopsLost": 1978,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 5000,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 6,
  "tilesConquered": 219,
  "tilesPerSecond": 365,
}
`;

exports[`attack scenarios > plains 50k attack vs defender with 0 troops 1`] = `
{
  "attackerLossPerSecond": 3297,
  "attackerLossPerTile": 9.032,
  "attackerTiles": 5000,
  "attackerTroopsLost": 1978,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 5000,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 6,
  "tilesConquered": 219,
  "tilesPerSecond": 365,
}
`;

exports[`attack scenarios > plains 100-tile turtle, 1M troops: conquered outright after one tile 1`] = `
{
  "attackerLossPerSecond": 31580,
  "attackerLossPerTile": 63.15,
  "attackerTiles": 9900,
  "attackerTroopsLost": 6315,
  "defenderEliminated": true,
  "defenderLossPerSecond": 50000,
  "defenderLossPerTile": 100,
  "defenderTiles": 100,
  "defenderTroopsLost": 10000,
  "finished": true,
  "ticks": 2,
  "tilesConquered": 100,
  "tilesPerSecond": 500,
}
`;

exports[`attack scenarios > plains 100-troop attack vs 1M defender 1`] = `
{
  "attackerLossPerSecond": 333.3,
  "attackerLossPerTile": 100,
  "attackerTiles": 5000,
  "attackerTroopsLost": 100,
  "defenderEliminated": false,
  "defenderLossPerSecond": 666.7,
  "defenderLossPerTile": 200,
  "defenderTiles": 5000,
  "defenderTroopsLost": 200,
  "finished": true,
  "ticks": 3,
  "tilesConquered": 1,
  "tilesPerSecond": 3.333,
}
`;

exports[`attack scenarios > plains 400-tile turtle, 4M troops (10k/tile) under a defense post, attacked with 1M 1`] = `
{
  "attackerLossPerSecond": 454500,
  "attackerLossPerTile": 31250,
  "attackerTiles": 9600,
  "attackerTroopsLost": 1000000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 145500,
  "defenderLossPerTile": 10000,
  "defenderTiles": 400,
  "defenderTroopsLost": 320000,
  "finished": true,
  "ticks": 22,
  "tilesConquered": 32,
  "tilesPerSecond": 14.55,
}
`;

exports[`attack scenarios > plains 400-tile turtle, 400k troops (1k/tile), attacked with 400k 1`] = `
{
  "attackerLossPerSecond": 60960,
  "attackerLossPerTile": 146.9,
  "attackerTiles": 9600,
  "attackerTroopsLost": 36574,
  "defenderEliminated": false,
  "defenderLossPerSecond": 195000,
  "defenderLossPerTile": 469.9,
  "defenderTiles": 400,
  "defenderTroopsLost": 117000,
  "finished": true,
  "ticks": 6,
  "tilesConquered": 249,
  "tilesPerSecond": 415,
}
`;

exports[`attack scenarios > plains big attacker (9500 tiles) vs small defender (500 tiles) 1`] = `
{
  "attackerLossPerSecond": 3387,
  "attackerLossPerTile": 65.31,
  "attackerTiles": 9500,
  "attackerTroopsLost": 9144,
  "defenderEliminated": false,
  "defenderLossPerSecond": 2481,
  "defenderLossPerTile": 47.86,
  "defenderTiles": 500,
  "defenderTroopsLost": 6700,
  "finished": true,
  "ticks": 27,
  "tilesConquered": 140,
  "tilesPerSecond": 51.85,
}
`;

exports[`attack scenarios > plains bot vs human defender 1`] = `
{
  "attackerLossPerSecond": 2306,
  "attackerLossPerTile": 32.64,
  "attackerTiles": 5000,
  "attackerTroopsLost": 7149,
  "defenderEliminated": false,
  "defenderLossPerSecond": 287.1,
  "defenderLossPerTile": 4.064,
  "defenderTiles": 5000,
  "defenderTroopsLost": 890,
  "finished": true,
  "ticks": 31,
  "tilesConquered": 219,
  "tilesPerSecond": 70.65,
}
`;

exports[`attack scenarios > plains bot vs terra nullius, attack 2k 1`] = `
{
  "attackerLossPerSecond": 224.8,
  "attackerLossPerTile": 3.549,
  "attackerTiles": 1000,
  "attackerTroopsLost": 472,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 21,
  "tilesConquered": 133,
  "tilesPerSecond": 63.33,
}
`;

exports[`attack scenarios > plains defender with defense posts covering the whole border 1`] = `
{
  "attackerLossPerSecond": 4000,
  "attackerLossPerTile": 400,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 100,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 250,
  "finished": true,
  "ticks": 25,
  "tilesConquered": 25,
  "tilesPerSecond": 10,
}
`;

exports[`attack scenarios > plains defender with one defense post at the border 1`] = `
{
  "attackerLossPerSecond": 3125,
  "attackerLossPerTile": 166.7,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 187.5,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 600,
  "finished": true,
  "ticks": 32,
  "tilesConquered": 60,
  "tilesPerSecond": 18.75,
}
`;

exports[`attack scenarios > plains dense defender (200k on 5k tiles, 40/tile, ~half the no-city cap), stack 1.67x their army 1`] = `
{
  "attackerLossPerSecond": 4408,
  "attackerLossPerTile": 12.08,
  "attackerTiles": 5000,
  "attackerTroopsLost": 2645,
  "defenderEliminated": false,
  "defenderLossPerSecond": 5933,
  "defenderLossPerTile": 16.26,
  "defenderTiles": 5000,
  "defenderTroopsLost": 3560,
  "finished": true,
  "ticks": 6,
  "tilesConquered": 219,
  "tilesPerSecond": 365,
}
`;

exports[`attack scenarios > plains dense defender (200k on 5k tiles, 40/tile, ~half the no-city cap), stack 1/4 their army 1`] = `
{
  "attackerLossPerSecond": 3833,
  "attackerLossPerTile": 40.25,
  "attackerTiles": 5000,
  "attackerTroopsLost": 8815,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1548,
  "defenderLossPerTile": 16.26,
  "defenderTiles": 5000,
  "defenderTroopsLost": 3560,
  "finished": true,
  "ticks": 23,
  "tilesConquered": 219,
  "tilesPerSecond": 95.22,
}
`;

exports[`attack scenarios > plains dense defender (200k on 5k tiles, 40/tile, ~half the no-city cap), stack 1x their army 1`] = `
{
  "attackerLossPerSecond": 6310,
  "attackerLossPerTile": 20.17,
  "attackerTiles": 5000,
  "attackerTroopsLost": 4417,
  "defenderEliminated": false,
  "defenderLossPerSecond": 5086,
  "defenderLossPerTile": 16.26,
  "defenderTiles": 5000,
  "defenderTroopsLost": 3560,
  "finished": true,
  "ticks": 7,
  "tilesConquered": 219,
  "tilesPerSecond": 312.9,
}
`;

exports[`attack scenarios > plains dense defender (200k on 5k tiles, 40/tile, ~half the no-city cap), stack 3/4 their army 1`] = `
{
  "attackerLossPerSecond": 6601,
  "attackerLossPerTile": 27.13,
  "attackerTiles": 5000,
  "attackerTroopsLost": 5941,
  "defenderEliminated": false,
  "defenderLossPerSecond": 3956,
  "defenderLossPerTile": 16.26,
  "defenderTiles": 5000,
  "defenderTroopsLost": 3560,
  "finished": true,
  "ticks": 9,
  "tilesConquered": 219,
  "tilesPerSecond": 243.3,
}
`;

exports[`attack scenarios > plains equal 50k vs 50k, attack 10k 1`] = `
{
  "attackerLossPerSecond": 2306,
  "attackerLossPerTile": 32.64,
  "attackerTiles": 5000,
  "attackerTroopsLost": 7149,
  "defenderEliminated": false,
  "defenderLossPerSecond": 287.1,
  "defenderLossPerTile": 4.064,
  "defenderTiles": 5000,
  "defenderTroopsLost": 890,
  "finished": true,
  "ticks": 31,
  "tilesConquered": 219,
  "tilesPerSecond": 70.65,
}
`;

exports[`attack scenarios > plains equal 50k vs 50k, attack 25k 1`] = `
{
  "attackerLossPerSecond": 5499,
  "attackerLossPerTile": 32.64,
  "attackerTiles": 5000,
  "attackerTroopsLost": 7149,
  "defenderEliminated": false,
  "defenderLossPerSecond": 684.6,
  "defenderLossPerTile": 4.064,
  "defenderTiles": 5000,
  "defenderTroopsLost": 890,
  "finished": true,
  "ticks": 13,
  "tilesConquered": 219,
  "tilesPerSecond": 168.5,
}
`;

exports[`attack scenarios > plains equal 50k vs 50k, attack 50k (all-in) 1`] = `
{
  "attackerLossPerSecond": 5253,
  "attackerLossPerTile": 16.79,
  "attackerTiles": 5000,
  "attackerTroopsLost": 3677,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1271,
  "defenderLossPerTile": 4.064,
  "defenderTiles": 5000,
  "defenderTroopsLost": 890,
  "finished": true,
  "ticks": 7,
  "tilesConquered": 219,
  "tilesPerSecond": 312.9,
}
`;

exports[`attack scenarios > plains human vs bot defender 1`] = `
{
  "attackerLossPerSecond": 1614,
  "attackerLossPerTile": 22.85,
  "attackerTiles": 5000,
  "attackerTroopsLost": 5004,
  "defenderEliminated": false,
  "defenderLossPerSecond": 287.1,
  "defenderLossPerTile": 4.064,
  "defenderTiles": 5000,
  "defenderTroopsLost": 890,
  "finished": true,
  "ticks": 31,
  "tilesConquered": 219,
  "tilesPerSecond": 70.65,
}
`;

exports[`attack scenarios > plains human vs terra nullius, attack 2k 1`] = `
{
  "attackerLossPerSecond": 393.3,
  "attackerLossPerTile": 7.098,
  "attackerTiles": 1000,
  "attackerTroopsLost": 944,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 24,
  "tilesConquered": 133,
  "tilesPerSecond": 55.42,
}
`;

exports[`attack scenarios > plains human vs terra nullius, attack 20k 1`] = `
{
  "attackerLossPerSecond": 1180,
  "attackerLossPerTile": 7.098,
  "attackerTiles": 1000,
  "attackerTroopsLost": 944,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 8,
  "tilesConquered": 133,
  "tilesPerSecond": 166.3,
}
`;

exports[`attack scenarios > plains nation vs bot defender 1`] = `
{
  "attackerLossPerSecond": 1614,
  "attackerLossPerTile": 22.85,
  "attackerTiles": 5000,
  "attackerTroopsLost": 5004,
  "defenderEliminated": false,
  "defenderLossPerSecond": 287.1,
  "defenderLossPerTile": 4.064,
  "defenderTiles": 5000,
  "defenderTroopsLost": 890,
  "finished": true,
  "ticks": 31,
  "tilesConquered": 219,
  "tilesPerSecond": 70.65,
}
`;

exports[`attack scenarios > plains outmatched 20k vs 200k, attack 4k 1`] = `
{
  "attackerLossPerSecond": 930.2,
  "attackerLossPerTile": 97.56,
  "attackerTiles": 5000,
  "attackerTroopsLost": 4000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 381.4,
  "defenderLossPerTile": 40,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1640,
  "finished": true,
  "ticks": 43,
  "tilesConquered": 41,
  "tilesPerSecond": 9.535,
}
`;

exports[`attack scenarios > plains outmatched 20k vs 200k, attack 20k (all-in) 1`] = `
{
  "attackerLossPerSecond": 2755,
  "attackerLossPerTile": 40.25,
  "attackerTiles": 5000,
  "attackerTroopsLost": 8815,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1113,
  "defenderLossPerTile": 16.26,
  "defenderTiles": 5000,
  "defenderTroopsLost": 3560,
  "finished": true,
  "ticks": 32,
  "tilesConquered": 219,
  "tilesPerSecond": 68.44,
}
`;

exports[`attack scenarios > plains overwhelming 200k vs 20k, attack 40k 1`] = `
{
  "attackerLossPerSecond": 3408,
  "attackerLossPerTile": 9.338,
  "attackerTiles": 5000,
  "attackerTroopsLost": 2045,
  "defenderEliminated": false,
  "defenderLossPerSecond": 593.3,
  "defenderLossPerTile": 1.626,
  "defenderTiles": 5000,
  "defenderTroopsLost": 356,
  "finished": true,
  "ticks": 6,
  "tilesConquered": 219,
  "tilesPerSecond": 365,
}
`;

exports[`attack scenarios > plains small attacker (500 tiles) vs big defender (9500 tiles) 1`] = `
{
  "attackerLossPerSecond": 1587,
  "attackerLossPerTile": 76.92,
  "attackerTiles": 500,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 103.2,
  "defenderLossPerTile": 5,
  "defenderTiles": 9500,
  "defenderTroopsLost": 650,
  "finished": true,
  "ticks": 63,
  "tilesConquered": 130,
  "tilesPerSecond": 20.63,
}
`;

exports[`attack scenarios > plains traitor defender 1`] = `
{
  "attackerLossPerSecond": 1430,
  "attackerLossPerTile": 16.32,
  "attackerTiles": 5000,
  "attackerTroopsLost": 3575,
  "defenderEliminated": false,
  "defenderLossPerSecond": 356,
  "defenderLossPerTile": 4.064,
  "defenderTiles": 5000,
  "defenderTroopsLost": 890,
  "finished": true,
  "ticks": 25,
  "tilesConquered": 219,
  "tilesPerSecond": 87.6,
}
`;

exports[`attack scenarios > plains very dense defender (650k on 5k tiles, 130/tile, ~1 city over cap), stack 1.67x their army 1`] = `
{
  "attackerLossPerSecond": 6907,
  "attackerLossPerTile": 18.92,
  "attackerTiles": 5000,
  "attackerTroopsLost": 4144,
  "defenderEliminated": false,
  "defenderLossPerSecond": 19280,
  "defenderLossPerTile": 52.83,
  "defenderTiles": 5000,
  "defenderTroopsLost": 11570,
  "finished": true,
  "ticks": 6,
  "tilesConquered": 219,
  "tilesPerSecond": 365,
}
`;

exports[`attack scenarios > plains very dense defender (650k on 5k tiles, 130/tile, ~1 city over cap), stack 1/4 their army 1`] = `
{
  "attackerLossPerSecond": 6279,
  "attackerLossPerTile": 63.07,
  "attackerTiles": 5000,
  "attackerTroopsLost": 13813,
  "defenderEliminated": false,
  "defenderLossPerSecond": 5259,
  "defenderLossPerTile": 52.83,
  "defenderTiles": 5000,
  "defenderTroopsLost": 11570,
  "finished": true,
  "ticks": 22,
  "tilesConquered": 219,
  "tilesPerSecond": 99.55,
}
`;

exports[`attack scenarios > plains very dense defender (650k on 5k tiles, 130/tile, ~1 city over cap), stack 1x their army 1`] = `
{
  "attackerLossPerSecond": 9831,
  "attackerLossPerTile": 31.42,
  "attackerTiles": 5000,
  "attackerTroopsLost": 6882,
  "defenderEliminated": false,
  "defenderLossPerSecond": 16530,
  "defenderLossPerTile": 52.83,
  "defenderTiles": 5000,
  "defenderTroopsLost": 11570,
  "finished": true,
  "ticks": 7,
  "tilesConquered": 219,
  "tilesPerSecond": 312.9,
}
`;

exports[`attack scenarios > plains very dense defender (650k on 5k tiles, 130/tile, ~1 city over cap), stack 3/4 their army 1`] = `
{
  "attackerLossPerSecond": 10240,
  "attackerLossPerTile": 42.07,
  "attackerTiles": 5000,
  "attackerTroopsLost": 9214,
  "defenderEliminated": false,
  "defenderLossPerSecond": 12860,
  "defenderLossPerTile": 52.83,
  "defenderTiles": 5000,
  "defenderTroopsLost": 11570,
  "finished": true,
  "ticks": 9,
  "tilesConquered": 219,
  "tilesPerSecond": 243.3,
}
`;

exports[`attack scenarios > world highland/mountain region, 100k vs 100k, attack 20k 1`] = `
{
  "attackerLossPerSecond": 545,
  "attackerLossPerTile": 0.2364,
  "attackerTiles": 5000,
  "attackerTroopsLost": 109,
  "defenderEliminated": false,
  "defenderLossPerSecond": 100,
  "defenderLossPerTile": 0.04338,
  "defenderTiles": 5000,
  "defenderTroopsLost": 20,
  "finished": true,
  "ticks": 2,
  "tilesConquered": 461,
  "tilesPerSecond": 2305,
}
`;

exports[`attack scenarios > world huge empires (~150k tiles each), 2M vs 2M, attack 400k 1`] = `
{
  "attackerLossPerSecond": 6223,
  "attackerLossPerTile": 12.47,
  "attackerTiles": 108968,
  "attackerTroopsLost": 16801,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1221,
  "defenderLossPerTile": 2.447,
  "defenderTiles": 121741,
  "defenderTroopsLost": 3296,
  "finished": true,
  "ticks": 27,
  "tilesConquered": 1347,
  "tilesPerSecond": 498.9,
}
`;

exports[`attack scenarios > world mountain region, 100k vs 100k, attack 20k 1`] = `
{
  "attackerLossPerSecond": 4545,
  "attackerLossPerTile": 122.7,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 740.9,
  "defenderLossPerTile": 20,
  "defenderTiles": 5000,
  "defenderTroopsLost": 3260,
  "finished": true,
  "ticks": 44,
  "tilesConquered": 163,
  "tilesPerSecond": 37.05,
}
`;

exports[`attack scenarios > world mountain region, human vs terra nullius, attack 20k 1`] = `
{
  "attackerLossPerSecond": 4545,
  "attackerLossPerTile": 22.75,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 44,
  "tilesConquered": 879,
  "tilesPerSecond": 199.8,
}
`;

exports[`attack scenarios > world plains-ish region, 100k vs 100k, attack 20k 1`] = `
{
  "attackerLossPerSecond": 4444,
  "attackerLossPerTile": 93.02,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 955.6,
  "defenderLossPerTile": 20,
  "defenderTiles": 5000,
  "defenderTroopsLost": 4300,
  "finished": true,
  "ticks": 45,
  "tilesConquered": 215,
  "tilesPerSecond": 47.78,
}
`;
